:memo: Converted CSS px to em

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     <title>Loïc D.</title>
 </head>
 <body>
+<a class="top-btn" href="#header">Haut de la page</a>
 <header id="header">
-    <h1 class="hidden">Loïc Delanoë, Développeur web</h1>
+    <h1 class="hidden">Loïc Delanoë,&nbsp;Développeur web</h1>
     <ul class="header-list">
         <li>
             <h2><a href="index.html">Loïc D.</a></h2>
@@ -64,22 +65,22 @@
     </ul>
 </header>
 <main itemscope itemtype="https://schema.org/Person">
-    <section class="hero-section">
+    <section id="hero" class="hero-section">
         <h2><span itemprop="name">Loïc</span> <span itemprop="familyName">Delanoë</span>, Développeur Web</h2>
         <a href="#myProfil" class="cta primary" title="En savoir plus sur moi">Découvrez moi</a>
     </section>
-    <section class="contact-section">
+    <section id="contact" class="contact-section">
         <ul class="contact-list">
             <li id="coordonnees">
                 <h3>Contact</h3>
-                <address itemprop="telephone">Téléphone :&nbsp;
+                <address itemprop="telephone">Téléphone&nbsp;:&nbsp;
                     <a href="tel:+33604014765">+ 33 (0)6 04 01 47 65</a>
                 </address>
             </li>
             <li>
                 <h3>Coordonnées</h3>
                 <address itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
-                    <span itemprop="streetAddress">Rue Hullos, 69</span>,
+                    <span itemprop="streetAddress">Rue Hullos,&nbsp;69</span>,
                     <span itemprop="postalCode">4000</span>
                     <span itemprop="addressLocality">Liège</span>
                 </address>
@@ -115,52 +116,50 @@
                     </figure>
                 </li>
                 <li class="about-text">
-                    <h3 class="about-title">Étudiant en
-                        développement Web</h3>
-                    <p>Depuis mon adolescence, je suis passionné de web et de programmation. Ma détermination m’incite à
-                        persévérer sur chaque projet, sans jamais abandonner.</p>
+                    <h3 class="about-title">Étudiant en développement Web</h3>
+                    <p>Depuis mon adolescence,&nbsp;je suis passionné de web et de programmation.&nbsp;Ma détermination m’incite à
+                        persévérer sur chaque projet,&nbsp;sans jamais abandonner.</p>
                     <a class="about-link" href="#">En savoir plus sur moi →</a>
                 </li>
             </ul>
         </article>
     </section>
-    <section class="opinion-section">
+    <section id="opinion" class="opinion-section">
         <h2>Ce qui est important pour moi</h2>
-        <p>Pour moi, un bon développeur Web est une personne à l’écoute de ses clients, qui fournit un design soigné et
-            qui respect les normes / conventions des différents langages qu’il utilise, ainsi que l’accessibilité pour
+        <p>Pour moi,&nbsp;un bon développeur Web est une personne à l’écoute de ses clients,&nbsp;qui fournit un design soigné et
+            qui respect les normes&nbsp;/&nbsp;conventions des différents langages qu’il utilise,&nbsp;ainsi que l’accessibilité pour
             les personnes en situations de handicap.</p>
         <ul class="opinion-cards">
             <li>
-                <h3><a href="#">Design Web</a></h3>
+                <h3>Design Web</h3>
                 <p>Il est important de fournir un design complet et soigné aux clients afin qu’ils aient une bonne idée
                     de ce que leur site va donner quand il sera déployé.</p>
             </li>
             <li>
-                <h3><a href="#">Développement Web</a></h3>
-                <p>Après le design, le développement est tout aussi important, mais surtout le respect des normes /
-                    conventions des langages (sémantique en HTML).</p>
+                <h3>Développement Web</h3>
+                <p>Après le design, le développement est tout aussi important,&nbsp;mais surtout le respect des normes&nbsp;/&nbsp;conventions des langages&nbsp;(sémantique en HTML).</p>
             </li>
             <li>
-                <h3><a href="#">Accessibilité</a></h3>
-                <p>L’accessibilité d’un site web est cruciale, en effet n’importe quel site internet doit être pensé
+                <h3>Accessibilité</h3>
+                <p>L’accessibilité d’un site web est cruciale,&nbsp;en effet n’importe quel site internet doit être pensé
                     aussi pour les personnes en situation de handicap.</p>
             </li>
         </ul>
     </section>
     <section class="skill-section">
         <h2>Mes principales compétences</h2>
-        <p>Mes études m’ont donné les compétences essentielles pour le métier de développeur web. En voici 3 d’entres
+        <p>Mes études m’ont donné les compétences essentielles pour le métier de développeur web.&nbsp;En voici 3 d’entres
             elles.</p>
         <article>
             <h3 class="hidden">Les compétences que j'ai aqcuis</h3>
             <figure>
                 <img src="./img/article-section-img.webp" alt="code CSS">
-                <figcaption></figcaption>
+                <figcaption class="hidden">Code CSS dans un éditeur de texte</figcaption>
             </figure>
             <ul class="skills-list">
                 <li>
                     <h3>HTML</h3>
-                    <p>Je veille aux bonnes pratiques en HTML, priorisant l’accessibilité et la sémantique.</p>
+                    <p>Je veille aux bonnes pratiques en HTML,&nbsp;priorisant l’accessibilité et la sémantique.</p>
                 </li>
                 <li>
                     <h3>CSS3</h3>
@@ -169,7 +168,7 @@
                 </li>
                 <li>
                     <h3>JavaScript</h3>
-                    <p>Je suis attentif à son utilisation, et exploite ses capacités en programmation orientée objet
+                    <p>Je suis attentif à son utilisation,&nbsp;et exploite ses capacités en programmation orientée objet
                         (POO).</p>
                 </li>
             </ul>
@@ -177,14 +176,14 @@
     </section>
     <section id="formation" class="formation-section">
         <h2>Mes formations</h2>
-        <p>Les formations que j’ai suivies ont été fondamentales pour définir ma voie professionnelle. Elles m’ont
+        <p>Les formations que j’ai suivies ont été fondamentales pour définir ma voie professionnelle.&nbsp;Elles m’ont
             offert la clarté nécessaire pour trouver ma passion et déterminer la voie que je voulais suivre.</p>
         <ul class="cards-list">
             <li class="formation-card">
                 <h3>Licence Économie</h3>
                 <small>Option Gestion</small>
                 <time>2021</time>
-                <a href="#" class="cta primary">Université de Tours</a>
+                <a href="https://www.univ-tours.fr/" class="cta primary">Université de Tours</a>
                 <ul>
                     <li>Comprendre les marchés</li>
                     <li>Gestion d’entreprise</li>
@@ -195,19 +194,19 @@
                 <h3>Bachelier Infographie</h3>
                 <small>Option Web</small>
                 <time>2023</time>
-                <a href="#" class="cta third">HEPL</a>
+                <a href="https://www.hepl.be/fr" class="cta third">HEPL</a>
                 <ul>
                     <li>Sens de la créativité</li>
-                    <li>Photoshop, Illustrator</li>
+                    <li>Photoshop,&nbsp;Illustrator</li>
                     <li>Modélisation 3D</li>
                     <li>Programmation</li>
                 </ul>
             </li>
             <li class="formation-card">
                 <h3>Baccalauréat</h3>
-                <small>Option Mathématiques / LLCE</small>
+                <small>Option Mathématiques&nbsp;/&nbsp;LLCE</small>
                 <time>2022</time>
-                <a href="#" class="cta primary">Lycée Ronsard</a>
+                <a href="https://www.lyceeronsard.eu/" class="cta primary">Lycée Ronsard</a>
                 <ul>
                     <li>Mathématiques</li>
                     <li>Analyse de texte</li>
@@ -218,15 +217,15 @@
             </li>
         </ul>
     </section>
-    <section id="contact" class="footer-contact-section">
+    <section class="footer-contact-section">
         <h2 class="hidden">Me contacter</h2>
         <article>
             <ul class="footer-contact-list">
                 <li>
-                    <h3>Mon profil vous intéresse ?</h3>
+                    <h3>Mon profil vous intéresse&nbsp;?</h3>
                 </li>
-                <li><p>N’hésitez pas à me contacter par mail, GSM, ou via le formulaire.</p></li>
-                <li><a href="#" class="cta primary">Contactez moi</a></li>
+                <li><p>N’hésitez pas à me contacter par mail,&nbsp;GSM,&nbsp;ou via le formulaire.</p></li>
+                <li><a href="#footerContact" class="cta primary">Contactez moi</a></li>
             </ul>
         </article>
     </section>
@@ -251,26 +250,26 @@
     <ul class="contact-list footer">
         <li>
             <h3>Contact</h3>
-            <address itemprop="telephone">Téléphone :&nbsp;
+            <address>Téléphone&nbsp;:&nbsp;
                 <a href="tel:+33604014765">+ 33 (0)6 04 01 47 65</a>
             </address>
         </li>
         <li>
             <h3>Coordonnées</h3>
-            <address itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
-                <span itemprop="streetAddress">Rue Hullos, 69</span>,
+            <address itemscope itemtype="https://schema.org/PostalAddress">
+                <span itemprop="streetAddress">Rue Hullos,&nbsp;69</span>,
                 <span itemprop="postalCode">4000</span>
                 <span itemprop="addressLocality">Liège</span>
             </address>
         </li>
         <li>
-            <form>
-                <h3>Envoyez moi un mail !</h3>
+            <form id="footerContact" action="#" method="POST">
+                <h3>Envoyez moi un mail&nbsp;!</h3>
                 <label for="footerName">Nom</label>
-                <input type="text" name="name" id="footerName">
+                <input type="text" name="name" id="footerName" placeholder="Votre nom...">
                 <label for="footerEmail">Email</label>
-                <input type="email" name="email" id="footerEmail">
-                <button type="submit">Contactez moi</button>
+                <input type="email" name="email" id="footerEmail" placeholder="Votre mail...">
+                <button type="submit" class="cta primary">Contactez moi</button>
             </form>
         </li>
     </ul>
