--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="icon" type="image/x-icon" href="./img/favicon.jpg">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/media-queries.css">
     <title>Loïc D.</title>
 </head>
 <body>
@@ -26,12 +27,15 @@
             <h2><a href="index.html">Loïc D.</a></h2>
         </li>
         <li>
+            <label class="hidden" for="burgerButton">Open burger menu</label>
+            <input class="burger-button" type="checkbox" name="burger_button" id="burgerButton">
             <nav class="main-nav">
+                <h2><a href="index.html">Loïc D.</a></h2>
                 <h2 class="hidden">Navigation principale</h2>
                 <ul class="main-list">
                     <li><a href="#header" title="Aller vers l'accueil">Accueil</a></li>
                     <li class="dropdown-btn">À Propos
-                        <ul class="sub-list hidden">
+                        <ul class="sub-list">
                             <li><a href="#coordonnees" class="main-nav-btn" title="Aller vers mes coordonnées">Coordonnées</a>
                             </li>
                             <li><a href="#myProfil" class="main-nav-btn" title="Aller vers mon profil">Mon Profil</a>
@@ -39,7 +43,7 @@
                         </ul>
                     </li>
                     <li class="dropdown-btn">Formations
-                        <ul class="sub-list hidden">
+                        <ul class="sub-list">
                             <li><a href="#" class="main-nav-btn" title="Aller vers mes coordonnées">Baccalauréat</a>
                             </li>
                             <li><a href="#" class="main-nav-btn" title="Aller vers mon profil">Économie</a></li>
@@ -47,7 +51,7 @@
                         </ul>
                     </li>
                     <li class="dropdown-btn">Compétences
-                        <ul class="sub-list hidden">
+                        <ul class="sub-list">
                             <li><a href="#" class="main-nav-btn" title="Aller vers les compétences HTML">HTML</a></li>
                             <li><a href="#" class="main-nav-btn" title="Aller vers les compétences CSS">CSS</a></li>
                             <li><a href="#" class="main-nav-btn" title="Aller vers les compétences JavaScript">JavaScript</a>
