:memo: Added meta viewport

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description"
           content="Étudiant passionné de web et de programmation, je suis à la recherche d'opportunités pour mettre en pratique mes compétences en HTML, CSS, JavaScript et plus encore. Découvrez mon parcours, mes projets et mes aspirations dans le domaine du développement web sur mon site CV.">
     <meta name="author" content="Loïc Delanoë">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans&family=Space+Grotesk:wght@300;400;500&display=swap"
