:memo: Added JS burger menu

--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
             <h2><a href="index.html">Loïc D.</a></h2>
         </li>
         <li>
-            <label class="hidden" for="burgerButton">Open burger menu</label>
-            <input class="burger-button" type="checkbox" name="burger_button" id="burgerButton">
-            <nav class="main-nav">
+            <label class="hidden" for="cssBurgerButton">Open burger menu</label>
+            <input class="burger-button" type="checkbox" name="burger_button" id="cssBurgerButton">
+            <button id="burgerButton" class="hidden">Open burger menu</button>
+            <nav id="mainNav" class="main-nav close">
                 <h2><a href="index.html">Loïc D.</a></h2>
                 <h2 class="hidden">Navigation principale</h2>
                 <ul class="main-list">
