Add hover and replace SVG icons by font awesome

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     <h3 class="title">Étudiant en développement Web</h3>
                     <p>Depuis mon adolescence,&nbsp;je suis passionné de web et de programmation.&nbsp;Ma détermination m’incite à
                         persévérer sur chaque projet,&nbsp;sans jamais abandonner.</p>
-                    <a class="about-link" href="#">En savoir plus sur moi →</a>
+                    <a class="about-link" href="#">En savoir plus sur moi</a>
                 </li>
             </ul>
         </article>
